a little cleanup